update product card css

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@
 }
 
 .category-badge {
-    background-color: #007bff;
+    background-color: #0c3761;
     color: #fff;
     font-size: 0.85rem;
     padding: 0.2em 0.6em;
