--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="row">
         {% for product in product_list %}
-            <div class="col-lg-3 col-md-3 col-sm-12">
+            <div class="col-lg-3 col-md-3 col-sm-12 mt-4">
                 <div class="card mx-auto" style="max-width: 22rem; position: relative;">
                     <span class="category-badge">{{ product['category'] }}</span>
                     <img
@@ -14,7 +14,7 @@
                         <h5 class="card-title product-title">{{ product['title'] }}</h5>
                         <p class="card-text product-description">{{ product['description'] }}</p>
                         <div class="mb-3 price-tag">$ {{ product['price'] }}</div>
-                        <a href="#" class="btn btn-primary btn-block">Add to Cart</a>
+                        <a href="#" class="btn btn-outline-primary btn-block">Add to Cart</a>
                     </div>
                 </div>
             </div>
