--- a/templates/home.html
+++ b/templates/home.html
@@ -3,14 +3,14 @@
     <div class="row">
         {% for product in product_list %}
             <div class="col-lg-3 col-md-3 col-sm-12 mt-4">
-                <div class="card mx-auto" style="max-width: 22rem; position: relative;">
+                <div class="card mx-auto main_card" style="max-width: 22rem; position: relative;">
                     <span class="category-badge">{{ product['category'] }}</span>
                     <img
                             class="card-img-top"
                             src="{{ product['image'] }}"
                             alt="Fjallraven - Foldsack No. 1 Backpack"
                     >
-                    <div class="card-body">
+                    <div class="card-body" ref="product">
                         <h5 class="card-title product-title">{{ product['title'] }}</h5>
                         <a
                                 href="/product-detail/{{ product['id'] }}"
@@ -20,8 +20,8 @@
                             {{ product['description'] }}
                         </a>
                         <div class="mb-3 price-tag">$ {{ product['price'] }}</div>
-                        <button class="btn btn-outline-primary btn-block">Add to Cart</button>
                     </div>
+                    <button @click="addToCart({{ product }})" class="btn btn-outline-primary btn-block">Add to Cart</button>
                 </div>
             </div>
         {% endfor %}
