--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 {% block content %}
     <div class="container mt-5">
-        <h2 class="mb-4">Your Shopping Cart</h2>
+        <h2 class="mb-4">Your Shopping Cart([[ cart_list.length ]])</h2>
         <div class="row">
             <!-- Cart Items -->
             <div class="col-lg-8">
@@ -30,15 +30,22 @@
                             >
                         </td>
                         <td>
-                            <strong class="product-title">[[ item.title ]]</strong>
-                            <br>
-                            <small class="text-muted">Category: [[ item.category ]]</small>
-                            <p class="mb-0 product-description" style="max-width:200px;">[[ item.description ]]</p>
+                            <a
+                                    target="_blank"
+                                    :href="'/product-detail/'+item.id"
+                                    class="product-title"
+                            >[[ item.title ]]</a>
+                            <small class="text-muted">[[ item.category ]]</small>
                         </td>
                         <td>
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <button class="btn btn-outline-secondary btn-sm" type="button">-</button>
+                                    <button
+                                            class="btn btn-outline-secondary btn-sm"
+                                            type="button"
+                                            @click="removeCartQty(index)"
+                                    >-
+                                    </button>
                                 </div>
                                 <input
                                         type="text"
@@ -47,20 +54,26 @@
                                         v-model="item.qty"
                                 >
                                 <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary btn-sm" type="button">+</button>
+                                    <button
+                                            class="btn btn-outline-secondary btn-sm"
+                                            type="button"
+                                            @click="addCartQty(index)"
+                                    >+
+                                    </button>
                                 </div>
                             </div>
                         </td>
                         <td class="text-right">$ [[ item.price ]]</td>
                         <td class="text-right">$ [[ (item.qty * item.price ).toLocaleString() ]]</td>
                         <td class="text-center">
-                            <button class="btn btn-danger btn-sm">&times;</button>
+                            <button @click="removeCartItem(index)" class="btn btn-danger btn-sm">&times;</button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
                 <a href="/" class="btn btn-link">Continue Shopping</a>
             </div>
+
             <!-- Cart Summary -->
             <div class="col-lg-4">
                 <div class="card">
@@ -79,7 +92,7 @@
                             </li>
                             <li class="list-group-item d-flex justify-content-between">
                                 <span>Total</span>
-                                <strong>$ [[ calGrandTotal() + shipping_fee ]]</strong>
+                                <strong>$ [[ parseFloat(calGrandTotal()) + parseFloat(shipping_fee) ]]</strong>
                             </li>
                         </ul>
                         <button class="btn btn-primary btn-block">Proceed to Checkout</button>
