--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,18 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Bootstrap 4.6 Footer Example</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css">
-</head>
-<body>
-
-
-
-  <!-- Bootstrap 4.6 JS and FontAwesome (for icons) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-</body>
-</html>
+<footer class="bg-dark text-white mt-5">
+    <div class="container py-4">
+        <div class="row">
+            <!-- About Section -->
+            <div class="col-md-4 mb-3">
+                <h5>About Us</h5>
+                <p>
+                    Sample website footer using Bootstrap 4.6.
+                    Add your company info or message here.
+                </p>
+            </div>
+            <!-- Links Section -->
+            <div class="col-md-4 mb-3">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Home</a></li>
+                    <li><a href="#" class="text-white">About</a></li>
+                    <li><a href="#" class="text-white">Contact</a></li>
+                </ul>
+            </div>
+            <!-- Contact Section -->
+            <div class="col-md-4 mb-3">
+                <h5>Contact</h5>
+                <ul class="list-unstyled">
+                    <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
+                    <li><i class="fa fa-phone mr-2"></i> +123 456 7890</li>
+                    <li><i class="fa fa-map-marker mr-2"></i> Phnom Penh, Cambodia</li>
+                </ul>
+            </div>
+        </div>
+        <hr class="bg-white">
+        <div class="row">
+            <div class="col text-center">
+                <p class="mb-0">&copy; 2025 Your Company. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
