--- a/templates/master.html
+++ b/templates/master.html
@@ -3,125 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/style.css">
+    {% include 'style.html' %}
 </head>
 <body>
 <div id="app">
     {# Top Menu #}
     <div class="contain-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">FakeStore</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/contact">Contact</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <a href="/cart" class="btn btn-outline-success my-2 my-sm-0" type="button">Cart([[ cart_list.length ]])</a>
-                </form>
-            </div>
-        </nav>
+        {% include 'navbar.html' %}
     </div>
     {# Main Content #}
     <div class="container">
         {% block content %}{% endblock %}
     </div>
+    {# Footer #}
     <div class="container-fluid p-0 m-0">
-        <!-- Footer -->
-        <footer class="bg-dark text-white mt-5">
-            <div class="container py-4">
-                <div class="row">
-                    <!-- About Section -->
-                    <div class="col-md-4 mb-3">
-                        <h5>About Us</h5>
-                        <p>
-                            Sample website footer using Bootstrap 4.6.
-                            Add your company info or message here.
-                        </p>
-                    </div>
-                    <!-- Links Section -->
-                    <div class="col-md-4 mb-3">
-                        <h5>Quick Links</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Home</a></li>
-                            <li><a href="#" class="text-white">About</a></li>
-                            <li><a href="#" class="text-white">Contact</a></li>
-                        </ul>
-                    </div>
-                    <!-- Contact Section -->
-                    <div class="col-md-4 mb-3">
-                        <h5>Contact</h5>
-                        <ul class="list-unstyled">
-                            <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
-                            <li><i class="fa fa-phone mr-2"></i> +123 456 7890</li>
-                            <li><i class="fa fa-map-marker mr-2"></i> Phnom Penh, Cambodia</li>
-                        </ul>
-                    </div>
-                </div>
-                <hr class="bg-white">
-                <div class="row">
-                    <div class="col text-center">
-                        <p class="mb-0">&copy; 2025 Your Company. All rights reserved.</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- /Footer -->
+        {% include 'footer.html' %}
     </div>
 </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script>
-    const {createApp} = Vue
-    createApp({
-        delimiters: ['[[', ']]'],
-        mounted() {
-            let cart = JSON.parse(localStorage.getItem('cart_list') ?? '[]')
-            this.cart_list = cart
-        },
-        data() {
-            return {
-                message: 'Hello World!',
-                counter: 0,
-                cart_list: [],
-                grand_total: 0,
-                shipping_fee: 1.5
-            }
-        },
-        methods: {
-            addToCart(product) {
-                product.qty = 1
-                this.cart_list.push(product)
-                localStorage.setItem('cart_list', JSON.stringify(this.cart_list))
-            },
-            calGrandTotal(){
-                this.grand_total = 0
-                this.cart_list.forEach(item=>{
-                    let total = parseFloat(item.qty) * parseFloat(item.price)
-                   this.grand_total += total
-                })
-                return this.grand_total
-            }
-        }
-    }).mount('#app')
-
-</script>
+{% include 'script.html' %}
 </html>
 
