--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
                     <div class="card-body" ref="product">
                         <h5 class="card-title product-title">{{ product['title'] }}</h5>
                         <a
-                                href="/product-detail/{{ product['id'] }}"
+                                href="/product-detail?pro_id={{ product['id'] }}"
                                 target="_blank"
                                 class="card-text product-description text-dark"
                         >
