--- a/templates/admin/category/index.html
+++ b/templates/admin/category/index.html
@@ -11,7 +11,63 @@
                 </div>
             </div>
         </div>
-        <!-- /.content-header -->
+        <!-- Modal -->
+        <div
+                class="modal fade"
+                id="popup_modal"
+                data-backdrop="static"
+                data-keyboard="false"
+                tabindex="-1"
+                aria-labelledby="staticBackdropLabel"
+                aria-hidden="true"
+        >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Category</h5>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input
+                                    type="text"
+                                    class="form-control"
+                                    id="name"
+                                    placeholder="Enter name"
+                                    v-model="form.name"
+                            >
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea
+                                    rows="3"
+                                    class="form-control"
+                                    id="description"
+                                    v-model="form.description"
+                            ></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 p-2">
+                            <button
+                                    style="float: left"
+                                    type="button"
+                                    class="btn btn-outline-danger ml-2"
+                                    @click="closePopUp()"
+                            >Close
+                            </button>
+                            <button
+                                    style="float: right"
+                                    type="button"
+                                    class="btn btn-outline-primary mr-2"
+                            >Save
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <!-- Main content -->
         <div class="content">
@@ -20,12 +76,51 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header">
-                                <input type="button" class="btn btn-outline-secondary" value="Add">
+                                <input
+                                        type="button"
+                                        class="btn btn-outline-secondary"
+                                        value="Add"
+                                        @click="openPopUp()"
+                                >
                             </div>
                             <div class="card-body">
-                                <center>
-                                    <h1>Category</h1>
-                                </center>
+                                <div class="table-responsive">
+                                    <table class="table table-borderless table-striped">
+                                        <thead>
+                                        <tr class="bg-primary">
+                                            <th>No.</th>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                            <th>Action</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr
+                                                v-for="(item, index) in category_list"
+                                                :key="'category-' + index"
+                                        >
+                                            <td>[[ index + 1 ]]</td>
+                                            <td>[[ item.name ]]</td>
+                                            <td>[[ item.description ]]</td>
+                                            <td>
+                                                <input
+                                                        type="button"
+                                                        class="btn btn-outline-secondary mr-3"
+                                                        value="Edit"
+                                                        @click="getEdit(item)"
+                                                >
+                                                <input
+                                                        type="button"
+                                                        class="btn btn-outline-danger"
+                                                        value="Delete"
+                                                        @click="deleteItem(item.id)"
+                                                >
+                                            </td>
+                                        </tr>
+                                        </tbody>
+
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -33,4 +128,72 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block script %}
+    <script>
+        const {createApp} = Vue
+        createApp({
+            delimiters: ['[[', ']]'],
+            data() {
+                return {
+                    category_list: [],
+                    form: {
+                        id: null,
+                        name: null,
+                        description: null
+                    }
+
+                }
+            },
+            created(){
+                this.fetchData()
+            },
+            methods: {
+                openPopUp() {
+                    $('#popup_modal').modal('show');
+                },
+                closePopUp() {
+                    $('#popup_modal').modal('hide');
+                },
+                getEdit(item) {
+                    this.form.id = item.id
+                    this.form.name = item.name
+                    this.form.description = item.description
+                    this.openPopUp()
+                },
+                deleteItem(id) {
+                    let currentIndex = this.category_list.findIndex(item => item.id === id)
+                    if (currentIndex !== -1) {
+                        Swal.fire({
+                            title: "Are you sure?",
+                            text: "You won't be able to revert this!",
+                            icon: "warning",
+                            showCancelButton: true,
+                            confirmButtonColor: "#3085d6",
+                            cancelButtonColor: "#d33",
+                            confirmButtonText: "Yes, delete it!"
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                this.category_list.splice(currentIndex, 1)
+                            }
+                        });
+
+                    }
+                },
+                fetchData() {
+                    let vm = this
+                    $.LoadingOverlay("show");
+                    axios.get('/admin/category/list')
+                        .then(function (response) {
+                            vm.category_list = response.data
+                            $.LoadingOverlay("hide");
+                        })
+                        .catch(function (error) {
+                            console.log(error);
+                        });
+                }
+            },
+        }).mount('#app')
+    </script>
 {% endblock %}
