--- a/templates/admin/master.html
+++ b/templates/admin/master.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="/static/admin/adminlte.css">
 </head>
 <body class="hold-transition sidebar-mini">
-<div class="wrapper">
-
+<div class="wrapper" id="app">
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <!-- Left navbar links -->
@@ -99,7 +98,7 @@
 
                     {# Category #}
                     <li class="nav-item">
-                        <a href="{{ url_for('category') }}" class="nav-link {{ 'active' if module == 'category' }}">
+                        <a href="{{ url_for('category_index') }}" class="nav-link {{ 'active' if module == 'category' }}">
                             <i class="nav-icon fas fa-cubes"></i>
                             <p>Category</p>
                         </a>
@@ -152,7 +151,6 @@
 
     {% block content %}{% endblock %}
 
-
     <!-- Footer -->
     <footer class="main-footer">
         <div class="float-right d-none d-sm-inline">
@@ -162,12 +160,16 @@
         <strong>Copyright &copy; 2014-2021 <a href="#">SU6.io</a>.</strong> All rights reserved.
     </footer>
 </div>
-
 <!-- jQuery -->
 <script src="/static/admin/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/static/admin/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/static/admin/adminlte.js"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js"></script>
+{% block script %}{% endblock %}
 </body>
 </html>
